// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly when disabled 1`] = `
<li
  aria-current={false}
  className="itemButton"
  data-testid="menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    aria-pressed={false}
    className="buttonComponent monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly when selected 1`] = `
<li
  aria-current={false}
  className="itemButton"
  data-testid="menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    aria-pressed={false}
    className="buttonComponent monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<li
  aria-current={false}
  className="itemButton dummy-class-name"
  data-testid="menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    aria-pressed={false}
    className="buttonComponent monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<li
  aria-current={false}
  className="itemButton"
  data-testid="menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    aria-pressed={false}
    className="buttonComponent monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with title and icon 1`] = `
<li
  aria-current={false}
  className="itemButton"
  data-testid="menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    aria-pressed={false}
    className="buttonComponent monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;
